--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "preview": "vite preview",
     "start": "serve -s dist"
   },
-  "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "@react-google-maps/api": "^2.20.6",
-    "@react-pdf/renderer": "^4.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.0"
-  },
+"dependencies": {
+  "@emailjs/browser": "^4.4.1",
+  "@react-google-maps/api": "^2.20.6",
+  "@react-pdf/renderer": "^4.3.0",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-icons": "^5.5.0",
+  "react-router-dom": "^7.6.0",
+  "serve": "^15.0.1"
+},
+
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^5.0.0"
