--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "ecommerce-shop",
   "version": "0.0.1",
+  "engines": {
+    "node": ">=18.0.0"
+  },
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
