--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "serve -s dist"
+    "start": "serve -s dist",
+  "postinstall": "chmod +x node_modules/.bin/vite"
   },
 "dependencies": {
   "@emailjs/browser": "^4.4.1",
